adding stanley theme

--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -1,1 +1,15 @@
-<p>Hell, it's about time!</p>
+
+	<!-- +++++ Welcome Section +++++ -->
+	<div id="ww">
+	    <div class="container">
+			<div class="row">
+				<div class="col-lg-8 col-lg-offset-2 centered">
+					<%= image_tag "user.png" %>
+					<h1>Hi, I am Carlos Narez!</h1>
+					<p>I love italian food and software development, and been working in it since 1993 but now I'm on fire! Please, consider contact me if you have some project in mind, I would like to help you implementing it.</p>
+				</div><!-- /col-lg-8 -->
+			</div><!-- /row -->
+	    </div> <!-- /container -->
+	</div><!-- /ww -->
+	
+	
